27-Mar-2013 Updated test packages CodeGenTest-dev and CodeGenTest2-dev to use FinalizeOptions rather than individual set handlers, since they have the same side-effect.

26-Mar-2013 OptionCollection finalization now occurs as a separate run from option creation. Creation occurs from top most parent module to lower most child, so that children inherit their parents options. Finalization now occurs in the reverse order, so that modules can query their dependents' options for state.

21-Mar-2013 Added C.OSXAppBundle module type, for creating the directory structure for an OSX application bundle, i.e. <name>.app/Contents/MacOS.

21-Mar-2013 Changed Opus.Core.BaseOptionCollection.FinalizeOptions to take a DependencyNode rather than a Target.

08-Mar-2013 Adding ObjectiveCTest1 and CocoaTest1 test packages.

08-Mar-2013 Introduced ObjectiveC and ObjectiveC++ support into C-dev, and Gcc-4.0 for OSX.

08-Mar-2013 Moved Win32 Resource Compiler dependency from the C package to the VisualCCommon package.

23-Feb-2013 Throw an exception if the package version specified on the command line does not match the *single* version in the package definition file.

23-Feb-2013 From the C package, deprecating the addition of the #define D_OPUS_PLATFORM_<specific EPlatform>. Now D_OPUS_PLATFORM_WINDOWS, D_OPUS_PLATFORM_LINUX, D_OPUS_PLATFORM_OSX are set. Use D_OPUS_PLATFORM_BITS to distinguish between 32 and 64 bit builds.

15-Feb-2012 Adding more circular dependency analysis to avoid issues generating graphs.

07-Feb-2012 Fixing -createpackageat such that an invalidly specified pathname does not result in the creation of any directories.

06-Feb-2012 Setting the number of jobs to zero, will now set the job count to be equal to the number of processors available.
