@@ -1,0 +1,11 @@
+// <copyright file="IXmlOptions.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>XmlUtilities package</summary>
+// <author>Mark Final</author>
+namespace XmlUtilities
+{
+    public interface IXmlOptions
+    {
+    }
+}
