@@ -1,0 +1,13 @@
+// <copyright file="OutputFileFlags.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>XmlUtilities package</summary>
+// <author>Mark Final</author>
+namespace XmlUtilities
+{
+    [System.Flags]
+    public enum OutputFileFlags
+    {
+        XmlFile = (1 << 0)
+    }
+}
