@@ -1,0 +1,19 @@
+// <copyright file="XmlWriterTool.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>XmlUtilities package</summary>
+// <author>Mark Final</author>
+namespace XmlUtilities
+{
+    public class XmlWriterTool : IXmlWriterTool
+    {
+        #region ITool Members
+        
+        string Opus.Core.ITool.Executable(Opus.Core.BaseTarget baseTarget)
+        {
+            throw new System.NotImplementedException ();
+        }
+        
+        #endregion
+    }
+}
