@@ -1,0 +1,8 @@
+// <copyright file="XmlUtilities.cs" company="Mark Final">
+//  Opus package
+// </copyright>
+// <summary>XmlUtilities package</summary>
+// <author>Mark Final</author>
+namespace XmlUtilities
+{
+}
